Landing page: fixed alignment issues with title. High resolution network. Added smoother subnode additions. Expanded homepage content in line with new design.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;700&family=Bitter:wght@400;700&display=swap');
 
+:root {
+  --green-accent: #26b790;
+  --blue-accent: #4c95f6;
+  --orange-accent: #ff8200;
+  --dark-grey: #333;
+  --background-light-grey: #f5f5f5;
+  --font-family-body: 'Bitter', serif;
+  --font-family-header: 'Bai Jamjuree', sans-serif;
+  --font-size-base: 16px;
+}
+
 body {
   margin: 0;
   font-family: 'Bitter', serif;
@@ -8,22 +19,31 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #f5f5f5;
+  background-color: var(--background-light-grey);
+  line-height: 1.8;
+}
+
+h2 {
+  font-size: 36px;
+  font-weight: bold;
+  text-transform: lowercase;
+  font-family: 'Bai Jamjuree', sans-serif;
 }
 
 header {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   box-sizing: border-box;
-  padding: 20px;
+  padding: 20px 55px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-weight: bold;
   border-bottom: 1px solid #000;
   z-index: 10;
+  min-height: 96px;
 }
 
 .logo {
@@ -32,10 +52,13 @@ header {
   max-width: 20px; /* Ensure it doesn't overflow */
   width: auto;
   gap: 10px;
+  text-decoration: none; /* Remove underline */
+  color: inherit; /* Inherit text color */
+  line-height: 1;
 }
 
 .logo img {
-  max-height: 40px; /* Constrain the logo height */
+  max-height: 55px; /* Constrain the logo height */
   width: auto; /* Maintain the aspect ratio */
 }
 
@@ -45,7 +68,6 @@ header {
   display: flex;
   gap: 45px;
   align-items: center;
-  width: 30vw;
   background-color: #f5f5f5;
 }
 
@@ -94,18 +116,44 @@ main {
   display: flex;
   flex-direction: row;
   border-bottom: 1px solid #000;
-  height: 97vh;
+  min-height: calc(100vh - 96px);
 }
 
 .left {
   flex: 1;
-  align-items: left;
-  padding: 2rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: left;
+  max-width: 43vw;
+  line-height: 1;
+  padding-left: 2%;
 }
 
-.left h1 {
+.left p {
+  height: 50%;
+  font-size: 20px;
+  line-height: 1.5;
+  margin: 0; /* Remove default margins */
+  padding: 0; /* Ensure no padding */
+}
+
+.animated-text-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items:baseline;
+  justify-content: left;
+  margin: 0; /* Remove default margins */
+  padding: 0; /* Ensure no padding */
+  height: 50%;
+}
+
+#animated-text {
   font-size: 5rem;
-  font-family: 'Bai Jamjuree', sans-serif;
+  display: inline-block; /* Prevent text shifting */
+  height: 100%;
 }
 
 .right {
@@ -114,10 +162,17 @@ main {
   align-items: center;
   justify-content: center;
   border-left: 1px solid #000;
+  width: 100%; /* Make the container fill its parent */
+  height: calc(100vh - 96px); /* Make the container fill its parent */
 }
 
 .node-map {
+  width: 100%; /* Make the container fill its parent */
+  height: 100%; /* Make the container fill its parent */
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 line {
@@ -125,99 +180,76 @@ line {
   stroke-width: 2px;
 }
 
-svg {
-  border: 1px solid red; /* Debug the SVG boundaries */
-}
+/* ----------------- THE PROBLEM ----------------- */
 
-.node {
-  animation: float 3s ease-in-out infinite;
-}
-
-@keyframes float {
-  0%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
-  }
-}
-
-.projects-overview {
+.preamble-hero {
   position: relative;
   display: flex;
   flex-direction: column;
 }
 
-.projects-header {
+.the-problem {
+  position: relative;
   display: flex;
-  align-items: center;
-  padding: 20px;
-  font-size: 24px;
-  font-weight: bold;
-  text-transform: lowercase;
-  font-family: 'Bai Jamjuree', sans-serif;
+  flex-direction: row;
+  border-bottom: 1px solid #000;
 }
 
-.projects-header-container {
+.left-problem {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  padding-left: 4rem;
+  max-width: 50vw;
+  height: 70vh;
+}
+
+.right-problem {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-left: 1px solid #000;
+  background-color: rgba(33,183,144,0.5);
+}
+
+.our-approach {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid #000;
+}
+
+.right-approach {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-left: 1px solid #000;
+  background-color: rgba(255,132,0,0.5);
+}
+
+.current-projects {
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 20px;
-  font-size: 24px;
-  font-weight: bold;
-  text-transform: lowercase;
-  font-family: 'Bai Jamjuree', sans-serif;
-}
-
-
-.projects-header-container:hover img[src="assets/images/shapes/projects.png"] {
-  content: url('../assets/images/shapes/projects-selected.png');
-}
-
-.projects-icon {
-  height: 24px;
-  width: 24px;
-}
-
-.projects-list {
-  display: flex;
-}
-
-.project-item {
-  flex: 1;
-  border-top: 1px solid #000;
+  justify-items: center;
   border-bottom: 1px solid #000;
-  border-right: 1px solid #000;
-  padding: 20px;
-  font-family: 'Bitter';
-  aspect-ratio: 1 / 1; /* Ensures a 1:1 width-to-height ratio */
+  min-height: 80vh;
+}
+
+.current-projects-text-container {
+  position: relative;
   display: flex;
-  flex-direction: column; /* Keep text and content aligned */
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  text-align: center; /* Center-align text */
-}
-
-.project-item h3 {
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.project-item p {
-  font-size: 16px;
-  color: #666;
-}
-
-.project-item.highlighted {
-  background-color: #2ebf91; /* Green background for highlighted project */
-  color: white;
-  border: none;
-}
-
-.project-item.highlighted h3,
-.project-item.highlighted p {
-  color: white;
+  justify-items: center;
+  width: 100%;
+  text-align: center;
 }
 
 .site-footer {
@@ -261,6 +293,6 @@ svg {
 }
 
 .logo-footer img {
-  max-height: 40px; /* Constrain the logo height */
+  max-height: 55px; /* Constrain the logo height */
   width: auto; /* Maintain the aspect ratio */
 }
